--- a/src/Maydear.WeiXin.Public/Maydear.WeiXin.Public.csproj
+++ b/src/Maydear.WeiXin.Public/Maydear.WeiXin.Public.csproj
@@ -15,7 +15,15 @@
     <Version>0.6</Version>
     <NeutralLanguage>zh-CHT</NeutralLanguage>
     <PackageTags>Maydear WeiXin</PackageTags>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)'=='Release|netstandard2.0'">
     <DocumentationFile>bin\Release\netstandard2.0\Maydear.WeiXin.Public.xml</DocumentationFile>
